--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Нико Бабаян — Digital-предприниматель & AI-энтузиаст</title>
+<title>Валерия Уткина — Мастер бровей из Твери</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
   :root {
-    --color-primary: #6a4bcd;
-    --color-primary-light: #8f6fee;
-    --color-bg: #f5f5f9;
-    --color-text: #2a2a2a;
-    --color-accent: #a772ff;
+    --color-primary: #c462a1;
+    --color-primary-light: #d48fcf;
+    --color-bg: #fff0f7;
+    --color-text: #3a2a3a;
+    --color-accent: #d98cd9;
     --transition-speed: 0.3s;
   }
   * {
@@ -39,7 +39,7 @@
     color: white;
     padding: 50px 20px 70px;
     text-align: center;
-    box-shadow: 0 8px 15px rgba(106,75,205,0.4);
+    box-shadow: 0 8px 15px rgba(196,98,161,0.5);
   }
   header h1 {
     margin: 0 0 10px;
@@ -58,7 +58,7 @@
     margin: -70px auto 50px;
     background: white;
     border-radius: 20px;
-    box-shadow: 0 15px 40px rgba(106,75,205,0.15);
+    box-shadow: 0 15px 40px rgba(196,98,161,0.15);
     padding: 40px 40px 60px;
   }
   section {
@@ -74,7 +74,7 @@
   }
   p {
     font-size: 1.1rem;
-    color: #3a3a3a;
+    color: #4a3a4a;
   }
   ul {
     padding-left: 20px;
@@ -84,7 +84,6 @@
     margin-bottom: 10px;
     font-size: 1.05rem;
   }
-  /* Buttons */
   .btn {
     display: inline-block;
     padding: 15px 30px;
@@ -93,7 +92,7 @@
     font-weight: 700;
     font-size: 1.1rem;
     border-radius: 50px;
-    box-shadow: 0 10px 20px rgba(106,75,205,0.3);
+    box-shadow: 0 10px 20px rgba(196,98,161,0.3);
     cursor: pointer;
     border: none;
     transition: background-color var(--transition-speed), box-shadow var(--transition-speed);
@@ -103,40 +102,36 @@
   }
   .btn:hover {
     background-color: var(--color-accent);
-    box-shadow: 0 12px 25px rgba(167,114,255,0.5);
+    box-shadow: 0 12px 25px rgba(217,140,217,0.5);
   }
-  /* Info cards */
   .card {
-    background: #faf9ff;
+    background: #fff5fb;
     border-radius: 15px;
-    box-shadow: 0 6px 18px rgba(106,75,205,0.1);
+    box-shadow: 0 6px 18px rgba(196,98,161,0.1);
     padding: 25px 30px;
     margin-bottom: 25px;
     transition: transform 0.3s ease;
   }
   .card:hover {
     transform: translateY(-8px);
-    box-shadow: 0 12px 40px rgba(106,75,205,0.2);
+    box-shadow: 0 12px 40px rgba(196,98,161,0.2);
   }
   .card h3 {
     margin-top: 0;
     margin-bottom: 12px;
     color: var(--color-primary);
   }
-  /* Grid for skills/projects */
   .grid-2 {
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
     gap: 20px;
   }
-  /* Footer */
   footer {
     text-align: center;
     color: #888;
     margin-top: 40px;
     font-size: 0.9rem;
   }
-  /* Responsive */
   @media (max-width: 600px) {
     header h1 {
       font-size: 2.4rem;
@@ -155,64 +150,59 @@
 <body>
 
 <header>
-  <h1>Нико Бабаян</h1>
-  <p>Родился 21 марта 2008 года</p>
+  <h1>Валерия Уткина</h1>
+  <p>Мастер бровей из Твери, родилась 24 июля 2008 года</p>
 </header>
 
 <main>
   <section id="about">
     <h2>О себе</h2>
-    <p><strong>Нико Бабаян</strong> — армянский digital-предприниматель, автор Telegram-каналов формата «Ищу тебя», веб-разработчик, AI-энтузиаст и креативный продюсер.</p>
-    <p>Известен благодаря созданию локальных Telegram-комьюнити и оригинальному подходу к продвижению в digital-среде.</p>
-    <p>Увлечён использованием современных технологий и искусственного интеллекта для автоматизации и креатива.</p>
+    <p>Привет! Меня зовут <strong>Валерия Уткина</strong>, и я — молодой и талантливый мастер бровей из города Тверь. Мне 17 лет, и я обожаю помогать людям чувствовать себя увереннее и красивее с помощью идеальных бровей.</p>
+    <p>С детства я увлекалась искусством и стилем, и мое хобби переросло в профессиональную деятельность. Я постоянно учусь новым техникам, посещаю мастер-классы и слежу за трендами в индустрии красоты.</p>
+    <p>Моя миссия — сделать каждую клиентку особенной и подчеркнуть её индивидуальность через стильные и ухоженные брови.</p>
+  </section>
+
+  <section id="skills">
+    <h2>Навыки и услуги</h2>
+    <ul>
+      <li>Коррекция и оформление бровей</li>
+      <li>Окрашивание хной и краской</li>
+      <li>Ламинирование бровей</li>
+      <li>Консультации по уходу за бровями</li>
+      <li>Использование только качественных и безопасных материалов</li>
+      <li>Индивидуальный подход к каждому клиенту</li>
+    </ul>
   </section>
 
   <section id="projects">
-    <h2>Проекты и каналы</h2>
+    <h2>Портфолио и отзывы</h2>
     <div class="grid-2">
       <div class="card">
-        <h3>Telegram-каналы</h3>
-        <ul>
-          <li><a href="https://t.me/ishutebyatverr" target="_blank" rel="noopener noreferrer">Ищу тебя Тверь</a></li>
-          <li><a href="https://t.me/nikotver" target="_blank" rel="noopener noreferrer">Niko Tver</a></li>
-          <li><a href="https://t.me/nizhnevartovsk_dtp" target="_blank" rel="noopener noreferrer">Ищу тебя Нижневартовск</a></li>
-          <li><a href="https://t.me/ishutebyakrasnoyarsk" target="_blank" rel="noopener noreferrer">Ищу тебя Красноярск</a></li>
-        </ul>
+        <h3>Портфолио</h3>
+        <p>Много работ с реальными клиентами, фото до и после, которые доказывают качество моих услуг и профессионализм.</p>
       </div>
       <div class="card">
-        <h3>Telegram-бот</h3>
-        <p><a href="https://t.me/niko_st_bot" target="_blank" rel="noopener noreferrer">Niko ST Bot</a> — бот по продажам и рекламе в Telegram.</p>
+        <h3>Отзывы</h3>
+        <p>«Валерия — настоящий профессионал! Теперь мои брови выглядят идеально, и я получаю много комплиментов.»</p>
+        <p>«Спасибо за внимательное отношение и отличный результат!»</p>
       </div>
     </div>
   </section>
 
-  <section id="skills">
-    <h2>Навыки и технологии</h2>
-    <ul>
-      <li>Веб-разработка: HTML, CSS, JavaScript</li>
-      <li>Работа с GitHub и Render</li>
-      <li>AI-инструменты для генерации контента и дизайна</li>
-      <li>Telegram API и бот-разработка</li>
-      <li>Digital-маркетинг и продвижение в соцсетях</li>
-      <li>Создание и ведение Telegram-сообществ</li>
-    </ul>
-  </section>
-
-  <section id="goals">
-    <h2>Цели и миссия</h2>
-    <p>Нико стремится доказать, что можно изменить свою жизнь за 60 дней, создав успешный digital-бизнес, влияя на аудиторию и реализуя свой потенциал.</p>
-    <p>В работе использует креативность, технологии и целеустремленность для достижения результатов.</p>
+  <section id="personal">
+    <h2>Личная жизнь</h2>
+    <p>Мой парень — <strong>Нико Бабаян</strong>, digital-предприниматель и творческий человек. Вместе мы поддерживаем друг друга и вдохновляемся на новые свершения.</p>
   </section>
 
   <section id="contacts">
     <h2>Контакты</h2>
     <p>Связаться со мной можно через Telegram:</p>
-    <a href="https://t.me/nikoitt" target="_blank" rel="noopener noreferrer" class="btn">Написать в Telegram</a>
+    <a href="https://t.me/valeriya_utkina" target="_blank" rel="noopener noreferrer" class="btn">Написать Валерии</a>
   </section>
 </main>
 
 <footer>
-  &copy; 2025 Нико Бабаян
+  &copy; 2025 Валерия Уткина
 </footer>
 
 </body>
